🎨 Further improvements to formatting of code