@@ -17,8 +17,7 @@ import jakarta.validation.constraints.NotNull;
 /**
  * Reference to a scraper specification owned by a specific user.
  * <p>
- * Used as an identifier for {@link ScraperOwnedSpecificationEntity} and for
- * serialization.
+ * Used as an identifier for {@link ScraperOwnedSpecificationEntity} and for serialization.
  *
  * @param owner The owner of the specification
  * @param name  The name of the specification
@@ -29,8 +28,13 @@ import jakarta.validation.constraints.NotNull;
 @JsonInclude(JsonInclude.Include.NON_NULL)
 @JsonIgnoreProperties(ignoreUnknown = true)
 public record ScraperOwnedSpecificationReference(
-  @JsonProperty("owner") @NotNull String owner,
-  @JsonProperty("name") @NotNull String name
+  @JsonProperty("owner")
+  @NotNull
+  String owner,
+
+  @JsonProperty("name")
+  @NotNull
+  String name
 ) implements Serializable {
 
   /**
@@ -50,6 +54,6 @@ public record ScraperOwnedSpecificationReference(
    */
   @JsonIgnore
   public @NotNull String fullyQualifiedName() {
-    return String.format("%s-%s", owner, name);
+    return "%s-%s".formatted(owner, name);
   }
 }
